Fri Dec 14 14:05:09 2001  Carlos O'Ryan  <coryan@uci.edu>

	* ace/svc_export.h:
	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore.dsp:
	  Found a better way to deal with the inconsistencies in the
	  ACE_Svc_Export macro.

	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore_static.dsp:
	  Fixed project file for static library.

Fri Dec 14 11:35:01 2001  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/SSL/SSL_SOCK_Acceptor.h:
	* ace/SSL/SSL_SOCK_Connector.h:
	* examples/QOS/Simple/Fill_ACE_QoS.h:
	* examples/QOS/Change_Receiver_FlowSpec/Fill_ACE_QoS.h:
	* examples/QOS/Change_Sender_TSpec/Fill_ACE_QoS.h:
	  Add #include "ace/OS_QoS.h".

Thu Dec 13 22:16:02 2001  Carlos O'Ryan  <coryan@uci.edu>

	* ace/svc_export.h:
	  Support ACE_Svc_BUILD_DLL also, to be consistent with all the
	  other export macros.

	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore.h:
	  Add missing ACE_Svc_Export to the class.

	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore.dsw:
	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore.dsp:
	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore_static.dsp:
	* netsvcs/clients/Naming/Dump_Restore/main.dsp:
	  Add missing project files and a workspace.

Fri Dec 14 00:08:57 2001  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/OS.h: Move around definitions of ACE_SOCK_GROUP
	and ACE_OVERLAPPED_COMPLETION_FUNCTION_FUNC to fix
	Win32 builds.

	* ace/OS.cpp: Add #include "ace/OS_QoS.h" to fix Win32
	builds.

Thu Dec 13 22:21:52 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* Updated dependencies of many Makefile's.

Thu Dec 13 21:36:15 2001  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/OS.cpp: Remove ACE_INLINE from join_leaf().
	* ace/OS_QoS.cpp: Remove ACE_INLINE.
	* ace/OS_QoS.h: Add include for pre.h.

Thu Dec 13 16:53:00 2001  Ossama Othman  <ossama@uci.edu>

	* bin/auto_run_tests.lst:

	  Added TAO/orbsvcs/tests/Security/Callback test to the list of
	  tests to run in our automated regression test suite.
