@@ -1,7 +1,7 @@
 #include "ace/Connection_Recycling_Strategy.h"
 
 
-ACE_RCSID(ace, Strategies, "$Id$")
+ACE_RCSID(ace, Connection_Recycling_Strategy, "$Id$")
 
 
 ACE_Connection_Recycling_Strategy::ACE_Connection_Recycling_Strategy (void)
