@@ -5,4 +5,4 @@
 #include "ace/Hashable.inl"
 #endif /* __ACE_INLINE __ */
 
-ACE_RCSID(ace, Strategies, "$Id$")
+ACE_RCSID(ace, Hashable, "$Id$")
