@@ -5,4 +5,4 @@
 #include "ace/Refcountable.inl"
 #endif /* __ACE_INLINE __ */
 
-ACE_RCSID(ace, Strategies, "$Id$")
+ACE_RCSID(ace, Refcountable, "$Id$")
