@@ -37,15 +37,12 @@ group OS_INCLUDES =
 
 group UTILS_FILES =
   "ACE.cpp",
-  "Init_ACE.cpp",
-  "Flag_Manip.cpp",
-  "Handle_Ops.cpp",
-  "Lib_Find.cpp",
-  "Malloc_Instantiations.cpp",
   "Active_Map_Manager.cpp",
   "Arg_Shifter.cpp",
   "ARGV.cpp",
+  "Basic_Stats.cpp",
   "Capabilities.cpp",
+  "Connection_Recycling_Strategy.cpp",
   "Containers.cpp",
   "Configuration.cpp",
   "Configuration_Import_Export.cpp",
@@ -53,18 +50,26 @@ group UTILS_FILES =
   "Dirent_Selector.cpp",
   "Dynamic.cpp",
   "Dynamic_Service_Base.cpp",
+  "Flag_Manip.cpp",
   "Functor.cpp",
   "Get_Opt.cpp",
+  "Handle_Ops.cpp",
   "Hash_Map_Manager.cpp",
+  "Hashable.cpp",
   "High_Res_Timer.cpp",
+  "Init_ACE.cpp",
+  "Lib_Find.cpp",
+  "Malloc_Instantiations.cpp",
   "Method_Request.cpp",
+  "Notification_Strategy.cpp",
   "Object_Manager.cpp",
   "Profile_Timer.cpp",
+  "Recyclable.cpp",
+  "Refcountable.cpp",
   "Registry.cpp",
   "SString.cpp",
   "Stats.cpp",
   "Sample_History.cpp",
-  "Basic_Stats.cpp",
   "System_Time.cpp",
   "Time_Request_Reply.cpp",
   "Timeprobe.cpp",
@@ -77,14 +82,12 @@ group UTILS_FILES =
 
 group UTILS_INCLUDES =
   "ACE.h",
-  "Init_ACE.h",
-  "Flag_Manip.h",
-  "Handle_Ops.h",
-  "Lib_Find.h",
   "Active_Map_Manager.h",
   "Arg_Shifter.h",
   "ARGV.h",
+  "Basic_Stats.h",
   "Capabilities.h",
+  "Connection_Recycling_Strategy.h",
   "Containers.h",
   "Configuration.h",
   "Configuration_Import_Export.h",
@@ -92,18 +95,25 @@ group UTILS_INCLUDES =
   "Dirent_Selector.h",
   "Dynamic.h",
   "Dynamic_Service_Base.h",
+  "Flag_Manip.h",
   "Functor.h",
   "Get_Opt.h",
+  "Handle_Ops.h",
   "Hash_Map_Manager.h",
+  "Hashable.h",
   "High_Res_Timer.h",
+  "Init_ACE.h",
+  "Lib_Find.h",
   "Method_Request.h",
+  "Notification_Strategy.h",
   "Object_Manager.h",
   "Profile_Timer.h",
+  "Recyclable.h",
+  "Refcountable.h",
   "Registry.h",
   "SString.h",
   "Stats.h",
   "Sample_History.h",
-  "Basic_Stats.h",
   "System_Time.h",
   "Time_Request_Reply.h",
   "Timeprobe.h",
@@ -209,14 +219,12 @@ group DEMUX_INCLUDES =
 group CONNECTION_FILES =
   "Asynch_IO.cpp",
   "Asynch_IO_Impl.cpp",
-  "POSIX_Asynch_IO.cpp",
-  "Strategies.cpp"
+  "POSIX_Asynch_IO.cpp"
 
 group CONNECTION_INCLUDES =
   "Asynch_IO.h",
   "Asynch_IO_Impl.h",
-  "POSIX_Asynch_IO.h",
-  "Strategies.h"
+  "POSIX_Asynch_IO.h"
 
 group SOCKETS_FILES =
   "Addr.cpp",
